--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -1,4 +1,4 @@
-name: Create a comment on a new issues
+name: Create a comment on a new issue
 
 on:
   issues:
@@ -9,5 +9,5 @@ jobs:
      runs-on: ubuntu-latest
      steps:
        - name: "dump github context"
-         run: echo '${{ toJSON(github.event) }}' | jq
+         run: echo `${{ toJSON(github.event) }}` | jq
 	 shell: bash 
